--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,12 +8,14 @@ include(${QT_USE_FILE})
 
 add_definitions(-DQT_NO_KEYWORDS -DQT_QMAKE_EXECUTABLE=/usr/bin/qmake-qt4)
 qt4_wrap_cpp(MOC_FILES
-  src/firstplugin.h
-    src/secondplugin.h
+  include/firstplugin.h
+    include/secondplugin.h
 )
 set(SOURCE_FILES
   src/firstplugin.cpp
     src/secondplugin.cpp
+  include/firstplugin.h
+    include/secondplugin.h
     plugin_description.xml
 manifest.xml
 mainpage.dox
